deploy/kustomize/overlays/kind/patch-kind.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-simple-app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: app
