deploy/kustomize/overlays/kind/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-simple-app
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  rules:
    - host: python-simple-app.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-simple-app
                port:
                  name: http
